--- a/testing.ipynb
+++ b/testing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c03e474e",
    "metadata": {},
    "outputs": [],
@@ -117,6 +117,8 @@
     "from deskewing_advanced import DeskewingPipeline\n",
     "import os\n",
     "import easyocr\n",
+    "from label_extraction_core.label_extractors import levenshtein_matching_extractor as lme\n",
+    "from label_extraction_core.label_extractors import regex_matching_extractor as rme\n",
     "\n",
     "deskewer = DeskewingPipeline(debug=True, debug_dir=working_dir)\n",
     "img_corrected, rot_est = deskewer.deskew(img, method=\"hough_lines\")\n",
@@ -125,6 +127,8 @@
     "\n",
     "working_dir = \"ntbk_test\"\n",
     "cv2.imwrite(os.path.join(working_dir, f\"label_{i:04d}_deskewed.png\"), img_corrected)\n",
+    "\n",
+    "\n",
     "\n",
     "# Run OCR\n",
     "reader = easyocr.Reader(['en'], gpu=False)\n",
@@ -140,6 +144,166 @@
     "\n",
     "text_in_lines = rem.easyocr_to_lines(ocr_results)\n",
     "label_pred = rem.extract_nutrients(text_in_lines, rem.nutrient_aliases)\n",
+    "\n",
+    "print(label_true)\n",
+    "print(label_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c78a65cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using CPU. Note: This module is much faster with a GPU.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 724.           1.5009831]]\n",
+      "\n",
+      " [[ -14.           3.0717795]]\n",
+      "\n",
+      " [[ 495.           1.5009831]]\n",
+      "\n",
+      " [[ 387.           1.5009831]]\n",
+      "\n",
+      " [[ 552.           1.5009831]]\n",
+      "\n",
+      " [[ 559.           1.5009831]]\n",
+      "\n",
+      " [[ 616.           1.5009831]]\n",
+      "\n",
+      " [[ 444.           1.5009831]]\n",
+      "\n",
+      " [[ 731.           1.5009831]]\n",
+      "\n",
+      " [[ 380.           1.5009831]]\n",
+      "\n",
+      " [[ 673.           1.5009831]]\n",
+      "\n",
+      " [[ 266.           1.5009831]]\n",
+      "\n",
+      " [[ 609.           1.5009831]]\n",
+      "\n",
+      " [[ 438.           1.5009831]]\n",
+      "\n",
+      " [[ 330.           1.5009831]]\n",
+      "\n",
+      " [[ 502.           1.5009831]]\n",
+      "\n",
+      " [[-528.           3.0717795]]\n",
+      "\n",
+      " [[ 666.           1.5009831]]\n",
+      "\n",
+      " [[-267.           3.0717795]]\n",
+      "\n",
+      " [[-275.           3.0717795]]\n",
+      "\n",
+      " [[ -21.           3.0717795]]\n",
+      "\n",
+      " [[-521.           3.0717795]]\n",
+      "\n",
+      " [[ 732.           1.4835298]]\n",
+      "\n",
+      " [[ 378.           1.5184364]]\n",
+      "\n",
+      " [[ 722.           1.5184364]]\n",
+      "\n",
+      " [[ 607.           1.5184364]]\n",
+      "\n",
+      " [[ 665.           1.5184364]]\n",
+      "\n",
+      " [[ 549.           1.5184364]]\n",
+      "\n",
+      " [[ 493.           1.5184364]]\n",
+      "\n",
+      " [[ 675.           1.4835298]]\n",
+      "\n",
+      " [[ 436.           1.5184364]]]\n",
+      "Lines_0 [np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-4.0000076), np.float32(-5.0000076), np.float32(-3.0000076), np.float32(-3.0000076), np.float32(-3.0000076), np.float32(-3.0000076), np.float32(-3.0000076), np.float32(-3.0000076), np.float32(-5.0000076), np.float32(-3.0000076)]\n",
+      "rotation: RotationResult(angle=4.000007629394531, confidence=0.9434314608573914, method='hough_lines')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using CPU. Note: This module is much faster with a GPU.\n",
+      "d:\\Aleksa\\master\\nutrition-label-recognition\\.venv\\Lib\\site-packages\\torch\\utils\\data\\dataloader.py:666: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index  Bounding Box (x,y)                            Text                 Confidence\n",
+      "-------------------------------------------------------------------------------------\n",
+      "0      (114,260), (244,260), (244,292), (114,292)    Nutrient             0.976438\n",
+      "1      (388,260), (476,260), (476,288), (388,288)    Valuo                0.914153\n",
+      "2      (72,318), (184,318), (184,346), (72,346)      Calories             0.754798\n",
+      "3      (328,316), (448,316), (448,348), (328,348)    206 kcal             0.830032\n",
+      "4      (76,374), (188,374), (188,406), (76,406)      otal fat             0.966615\n",
+      "5      (98,432), (282,432), (282,464), (98,464)      Soturated fat        0.442161\n",
+      "6      (74,492), (262,492), (262,524), (74,524)      Carbonydrate         0.861529\n",
+      "7      (325,485), (422,485), (422,527), (325,527)    16.2 9               0.816678\n",
+      "8      (95,545), (273,545), (273,584), (95,584)      Dietary fiber        0.757831\n",
+      "9      (96,604), (199,604), (199,642), (96,642)      Sugars               0.999332\n",
+      "10     (75,663), (172,663), (172,693), (75,693)      Prorein              0.831050\n",
+      "11     (325,656), (423,656), (423,700), (325,700)    15.19                0.973241\n",
+      "12     (328,368), (405,379), (400,413), (323,402)    9,0 9                0.845074\n",
+      "13     (329,425), (407,435), (400,471), (323,460)    1,3 0                0.143728\n",
+      "14     (330,539), (407,550), (401,587), (323,576)    9,5 9                0.535521\n",
+      "15     (330,596), (407,608), (400,643), (323,631)    4,.0 9               0.334406\n",
+      "Lines of text: ['nutrient valuo', 'calories 206 kcal', 'otal fat 9,0 9', 'soturated fat 1,3 0', 'carbonydrate 16.2 9', 'dietary fiber 9,5 9', 'sugars 4,.0 9', 'prorein 15.19']\n",
+      "Calories: 206 kcal\n",
+      "Total fat: 9.0 g\n",
+      "  Saturated fat: 1.3 g\n",
+      "Carbohydrate: 16.2 g\n",
+      "  Dietary fiber: 9.5 g\n",
+      "  Sugars: 4.0 g\n",
+      "Protein: 15.1 g\n",
+      "Calories: 206 kcal\n",
+      "Total fat: 1.3 g\n",
+      "  Saturated fat: No value\n",
+      "Carbohydrate: 16.2 g\n",
+      "  Dietary fiber: 9.5 g\n",
+      "  Sugars: 4.0 g\n",
+      "Protein: 15.2 g\n"
+     ]
+    }
+   ],
+   "source": [
+    "from augmentation import *\n",
+    "from deskewing_advanced import DeskewingPipeline\n",
+    "import os\n",
+    "from label_extraction_core.label_extractors import levenshtein_matching_extractor as lme\n",
+    "from label_extraction_core.label_extractors import regex_matching_extractor as rme\n",
+    "\n",
+    "working_dir = \"ntbk_test\"\n",
+    "\n",
+    "deskewer = DeskewingPipeline(debug=True, debug_dir=working_dir)\n",
+    "img_corrected, rot_est = deskewer.deskew(img, method=\"hough_lines\")\n",
+    "\n",
+    "print(\"rotation:\", rot_est)\n",
+    "\n",
+    "\n",
+    "cv2.imwrite(os.path.join(working_dir, f\"label_{i:04d}_deskewed.png\"), img_corrected)\n",
+    "\n",
+    "regex_matching_extr = rme.RegexMatchingExtractor()\n",
+    "levenshtein_extr = lme.LevenshteinMatchingExtractor(debug=True)\n",
+    "\n",
+    "label_pred, ocr_results = levenshtein_extr.predict_from_image(img_corrected)\n",
+    "\n",
+    "bbox_img = draw_bounding_boxes(img_corrected, ocr_results, font_scale=1)\n",
+    "cv2.imwrite(os.path.join(working_dir, f\"label_{i:04d}_boxes.png\"), bbox_img)\n",
     "\n",
     "print(label_true)\n",
     "print(label_pred)\n"
